# dynamic_optimization

./: README.md
gradient_descent_from_scratch/: gd.py  gd_implementation.ipynb
gradient_descent_from_scratch/data/: testdata.xlsx
linear_regression_distributed_optimization/: descentralized_extra_alrgorithm.ipynb  ejemplo_opt_v2.py  optimizacion_agentes_distribuidos.ipynb  pyproject.toml
linear_regression_distributed_optimization/data/: adjacency.xlsx  doble_estocastica.xlsx  testdata_dist.xlsx
