[tool.poetry]
name = "diego-udenar"
version = "0.1.0"
description = ""
authors = ["Diego Recalde"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.1.0"
numpy = "^1.25.2"
jupyter = "^1.0.0"
openpyxl = "^3.1.2"
seaborn = "^0.12.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
